welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:18: error: class Array takes type parameters
def colonneSuivante(t:Array){
                      ^Array1:18: error: class Array takes type parameters
def colonneSuivante(t:Array){
                      ^Array1:20: error: not found: value tailleTableau
  for(pas <-0 to tailleTableau -1){
                 ^