welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var tailleTableau=0
  tailleTableau = getMondeHauteur()
  var couleurs = new Array[Color] (tailleTableau)
  for(pas <- 0 to tailleTableau -1){
    couleurs(pas)=getCouleurSol()
    avance()
  }
  for(colonne<-1 to getMondeLargeur()-1){
    gauche()
    avance()
    droite()
    colonneSuivante(couleurs)
  }
}

def colonneSuivante(t:Array){
  avance()
  for(pas <-0 to tailleTableau -1){
    setCouleurBrosse(t(pas))
    baisseBrosse()
    leveBrosse()
    avance()
  }
}